# SpaghettiEngine-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
SpaghettiEngine/: Cargo.toml
SpaghettiEngine/spaghetti-engine-derive/src/: lib.rs
SpaghettiEngine/src/: main.rs
SpaghettiEngine/src/allocation/: mod.rs  object_pool.rs
SpaghettiEngine/src/core/: game.rs  mod.rs  thread_component.rs
SpaghettiEngine/src/demo/: mod.rs  singleplayer_demo.rs
SpaghettiEngine/src/dispatcher/: dispatcher_error.rs  executable.rs  execute.rs  function_dispatcher.rs  mod.rs
SpaghettiEngine/src/events/: event_dispatcher.rs  event_listener.rs  game_event.rs  mod.rs  nothing_happened_event.rs
SpaghettiEngine/src/input/: controller.rs  mod.rs
SpaghettiEngine/src/networking/: mod.rs  replicate.rs  token.rs
SpaghettiEngine/src/settings/: game_settings.rs  mod.rs  setting_change_request_event.rs  setting_changed_event.rs
SpaghettiEngine/src/utils/: as_any.rs  id_provider.rs  logger.rs  mod.rs  object_pool.rs  types.rs
SpaghettiEngine/src/world/: begin_end_play.rs  client_state.rs  game_component.rs  game_mode.rs  game_object.rs  mod.rs
examples/: input_demo.rs  singleplayer_demo.rs
spaghetti-engine-derive/: Cargo.toml
spaghetti-engine-derive/src/: lib.rs
src/: lib.rs  main.rs
src/core/: entry_point.rs  game.rs  game_window.rs  mod.rs
src/demo/: mod.rs
src/events/: event_dispatcher.rs  event_listener.rs  event_registry.rs  game_event.rs  mod.rs  nothing_happened_event.rs
src/examples/: singleplayer_demo.rs
src/input/: game_pad.rs  game_pad_events.rs  input_device.rs  input_dispatcher.rs  input_listener.rs  keyboard.rs  mod.rs  mouse.rs
src/networking/: mod.rs  replicate.rs  token.rs
src/settings/: game_settings.rs  mod.rs  setting_change_request_event.rs  setting_changed_event.rs
src/test/: mod.rs  window.rs  window_test.rs
src/tests/: event_registry_test.rs  log_test.rs  mod.rs  window_test.rs
src/unit_tests/: event_registry_test.rs  log_test.rs  mod.rs  mutex_test.rs
src/utils/: file_util.rs  id_provider.rs  id_type.rs  is_locked.rs  logger.rs  mod.rs  new_empty.rs  request_pipe.rs  types.rs
src/window/: cursor_mode.rs  game_window.rs  input_transform.rs  mod.rs  packets.rs  video_mode.rs  vsync_mode.rs  window_manager.rs  window_monitor.rs
src/world/: begin_end_play.rs  client_state.rs  empty_game_mode.rs  game_component.rs  game_mode.rs  game_state.rs  level.rs  mod.rs  update.rs
tests/: window_test.rs
