[package]
authors = ["bohdloss"]
description = "Just a game framework"
keywords = ["opengl, openal"]
license = "MIT"
name = "spaghetti-engine"
readme = "README.md"
repository = "https://github.com/bohdloss/SpaghettiEngine-Rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.2" # Used for automagically registering game events / object types
mopa = "0.2.2"
chrono = "0.4.24"
rand = "0.8.5"
error-stack = "0.3.1"
array-init = "2.1.0"
once_cell = "1.17.1"
lazy_static = "1.4.0"
cgmath = "0.18.0"
image = "0.24.6"

glfw = { git = "https://github.com/bohdloss/glfw-rs", branch = "with-monitor-functions-mutable", features = ["image"], optional = true } # Window management (Optional)
glium = "0.32.1" # OpenGL
alto = "3.0.4" # OpenAL

[features]
window = ["dep:glfw"]