[package]
name = "spaghetti_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
error-stack = "0.3.1"
array-init = "2.1.0"
glfw = "0.51.0" # Window management (Optional)
glium = "0.32.1" # OpenGL
alto = "3.0.4" # OpenAL