[package]
name = "spaghetti-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spaghetti-engine-derive = { path = "spaghetti-engine-derive" }

chrono = "0.4.24"
rand = "0.8.5"
error-stack = "0.3.1"
array-init = "2.1.0"
once_cell = "1.17.1"
lazy_static = "1.4.0"
cgmath = "0.18.0"
image = "0.24.6"

glfw = { version = "0.52.0", features = ["image"] } # Window management (Optional)
glium = "0.32.1" # OpenGL
alto = "3.0.4" # OpenAL